# CSG

./: README.md
include/efanna2e/: index.h  index_nsg copy.h  index_nsg.h  neighbor.h  seed_points.h
src/: CMakeLists.txt  index_nsg.cpp
tests/: CMakeLists.txt  test_searching.cpp  test_seed_points.cpp
